--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <nav>
-      <a class="orange" href="#"> Plan your Visit</a>
-      <a class="blue" href="#">Learn about the Park</a>
-      <a class="yellow" href="#">Get Involved</a>
+      <a class="orange" href="#"> Plan your <br>Visit</a>
+      <a class="blue" href="#">Learn about <br> the Park</a>
+      <a class="yellow" href="#">Get <br> Involved</a>
     </nav>
    
     <header>
@@ -37,7 +37,7 @@
   <section>
     <div class="icons">
         <img class="fire" src= "https://image.flaticon.com/icons/svg/2979/2979348.svg" alt="fire icon" />
-        <p>Fire is a natural and essential part of Yosemite. We manage fire carefully and study how it interacts with the park’s ecosystems. This blog provides updates about fires in Yosemite. <span>Check for current fire restrictions.</span></p>
+        <p>Fire is a natural and essential part of Yosemite. We manage fire carefully and study how it interacts with the park’s ecosystems. This blog provides updates about fires in Yosemite. Check for <span>current fire restrictions.</span></p>
     </div>
     <div class="icons">
       <img class= "van" src="https://image.flaticon.com/icons/svg/820/820374.svg" alt="travel van icon" />
